syntax = "proto3";

option java_package = "org.hse.moodactivities.common.proto.responses.activity";
option java_multiple_files = true;

package responses;

message GetActivityResponse {
  int32 statusCode = 1;
  string activity = 2;
}
